--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    {% block content %}
+    <head>
+        <title>{% block title %}Maktab{% endblock %}</title>
+        {% include "head.html" %}
+        {% block extra_head %}{% endblock %}
+    </head>
+    <body>
+        {% include "header.html" %}
 
-    {% end block %}
-</body>
+        <main x-data="{ loading: false }" class="max-w-[1920px] mt-16 py-5 mx-auto min-h-[80vh]">
+            <div id="loading" class="inset-0 z-[9999] backdrop-blur-lg fixed flex justify-center items-center" :style="loading ? '' : 'display: none !important'">
+                <span class="loading block loading-spinner text-info loading-lg"></span>
+            </div>
+            {% block content %}{% endblock %}
+        </main>
+
+        {% include 'components/footer.html' %}
+
+        {% block extra_body %}{% endblock %}
+    </body>
 </html>
